# arlon

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  Taskfile.yml  dist-workspace.toml
.github/workflows/: release.yml
cli/: Cargo.toml  README.md  Taskfile.yml
cli/src/: main.rs
cli/src/cli/: commands.rs
core/: Cargo.toml  README.md  Taskfile.yml
core/src/: lib.rs
core/src/application/dto/: commit_dto.rs  file_dto.rs
core/src/application/use_cases/: compare_commits.rs  compare_files.rs
core/src/domain/entities/: commit.rs  mod.rs
core/src/domain/repositories/: mod.rs
core/src/domain/services/: mod.rs
core/src/domain/value_objects/: branch_name.rs  commit_hash.rs  file_path.rs
core/src/infra/: mod.rs
core/src/infra/adapters/: file_path_converter.rs  mod.rs
core/src/infra/output/: formatter.rs  json_formatter.rs  simple_formatter.rs
core/src/infra/repositories/: git_repository_impl.rs
core/tests/: integration_tests.rs
src/: cli.rs  git.rs  lib.rs  main.rs  output.rs
src/application/dto/: commit_dto.rs
src/application/use_cases/: compare_commits.rs  compare_files.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: commit.rs  file_change.rs  mod.rs
src/domain/repositories/: git_repository.rs  mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: branch_name.rs  commit_hash.rs  file_path.rs  mod.rs
src/infra/: mod.rs
src/infra/adapters/: file_path_converter.rs
src/infra/cli/: args.rs  commands.rs  mod.rs
src/service/: mod.rs
tests/: cli_test.rs  git_test.rs  integration_tests.rs  output_test.rs
(+14 files in other folders)
