[package]
name = "arlon-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for arlon Git repository comparison tool"
license = "MIT"

[[bin]]
name = "arlon"
path = "src/main.rs"

[dependencies]
arlon-core = { path = "../arlon-core" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"