[package]
name = "arlon-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Git repository comparison and analysis"
license = "MIT"
repository = "https://github.com/Eagle-Konbu/arlon"

[dependencies]
git2 = "0.19"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.0"